[package]
name = "hello_remote_world"
version = "0.1.0"
authors = ["VS Code <vscode@microsoft.com>"]
edition = "2018"

[lib]
path ="./src/lib/lib.rs"

[dependencies]
strava = { git = "https://github.com/torhovland/strava-rs" }    # Strava API v3 Client
tokio = { version = "0.2", features = ["full"] }
